2008-11-28  Richard Dale  <richard.j.dale@gmail.com>
* Added a time data engine example
* Brought the Scripting Data Engine Init() method in line with the Applet code
* Added a Sources() method for the DataEngine to report a list of its sources
* Regenerated the Plasma classes from the current headers

2008-10-30  Richard Dale  <richard.j.dale@gmail.com>
* Regenerate the sources with the renamed classes ConfigLoader, FlashingLabel
  IconWidget and WebView.
* TODO: The Applet.Extender() method is now protected and the ScriptApplet
  class needs to invoke it via reflection.

2008-10-21  Richard Dale  <richard.j.dale@gmail.com>
* Regenerate the C# sources and add the new SvgWidget class
* Fix compile errors in the examples caused by the api changes

2008-09-22  Richard Dale  <richard.j.dale@gmail.com>
* Regenerate the C# sources from the current plasma headers, add ScrollBar 
  and TreeView widgets
* Add the missing calendar.ui file to the clock example

2008-08-23  Arno Rehn  <arno@arnorehn.de>
* Also check for referenced assemblies in the same path as the main assembly.

2008-08-12  Arno Rehn  <arno@arnorehn.de>
* Sizes of applets are now correctly restored.
* debug--

2008-08-11  Arno Rehn  <arno@arnorehn.de>
* Add the analog-clock applet converted to C#.

2008-08-10  Arno Rehn  <arno@arnorehn.de>
* Add some missing classes.
* Fix ShowConfigurationDialog() for the ScriptEngine.

2008-08-09  Arno Rehn  <arno@arnorehn.de>
* If necessary, initialize additional bindings in the ScriptEngine.
* If the class with the name of the main assembly and in the namespace
  with the name of the parent directory is not found, look for classes that
  inherit from PlasmaScripting.Applet and choose the first one.

2008-08-05  Richard Dale  <richard.j.dale@gmail.com>
* Add some new plasma classes Plasma::Frame, Plasma::PaintUtils, 
  Plasma::PopupApplet, Plasma::Slider, Plasma::TabBar and 
  Plasma::ToolTipManager

2008-07-08  Arno Rehn  <arno@arnorehn.de>