@@ -1,3 +1,10 @@
+2008-12-01  Richard Dale  <richard.j.dale@gmail.com>
+* Added UpdateAllSources() and RemoveSource() slots to the 
+  PlasmScripting.DataEngine
+* Used reflection to call various protected methods in the underlying applet
+  or dataEngine from the PlasmaScripting.Applet and PlasmaScripting.DataEngine
+  classes
+
 2008-11-28  Richard Dale  <richard.j.dale@gmail.com>
 * Added a time data engine example
 * Brought the Scripting Data Engine Init() method in line with the Applet code
